adding Advanced_Convolutional_layers
simplify many convolution building blocks

--- a/DL/notes/Advanced_Convolutional_layers.html
+++ b/DL/notes/Advanced_Convolutional_layers.html
@@ -13089,6 +13089,23 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h1 id="Advanced-Convolutional-Neural-Networks"><font style="color:#0015FF">Advanced Convolutional Neural Networks</font><a class="anchor-link" href="#Advanced-Convolutional-Neural-Networks">&#182;</a></h1>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>by: <strong>Amr Abdelhamed</strong></p>
+<p><strong><a href="https://www.linkedin.com/in/amrabdelhamed69/">Linkedin profile</a>
+<a href="https://github.com/Amrabdelhamed611/ML_Implementation/tree/main/DL">Github repo</a></strong></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p><h1>Table of Contents<span class="tocSkip"></span></h1></p>
 <div class="toc"><ul class="toc-item"><li><span><a data-toc-modified-id="Residual-Block-1" href="#Residual-Block"><span class="toc-item-num">1  </span>Residual Block</a></span></li><li><span><a data-toc-modified-id="Bottleneck-Residual-Block-2" href="#Bottleneck-Residual-Block"><span class="toc-item-num">2  </span>Bottleneck Residual Block</a></span></li><li><span><a data-toc-modified-id="Linear-BottleNecks-3" href="#Linear-BottleNecks"><span class="toc-item-num">3  </span>Linear BottleNecks</a></span></li><li><span><a data-toc-modified-id="Inverted-Residual-Block-4" href="#Inverted-Residual-Block"><span class="toc-item-num">4  </span>Inverted Residual Block</a></span></li><li><span><a data-toc-modified-id="Depth-Wise-Separable-Convolution-5" href="#Depth-Wise-Separable-Convolution"><span class="toc-item-num">5  </span>Depth-Wise Separable Convolution</a></span></li><li><span><a data-toc-modified-id="Squeeze-and-Excitation-Block-6" href="#Squeeze-and-Excitation-Block"><span class="toc-item-num">6  </span>Squeeze and Excitation Block</a></span></li><li><span><a data-toc-modified-id="MBConv-7" href="#MBConv"><span class="toc-item-num">7  </span>MBConv</a></span></li><li><span><a data-toc-modified-id="Fused-Inverted-Residual-(Fused-MBConv)-:-8" href="#Fused-Inverted-Residual-(Fused-MBConv)-:"><span class="toc-item-num">8  </span>Fused Inverted Residual (Fused MBConv) :</a></span></li><li><span><a data-toc-modified-id="Conclusion-9" href="#Conclusion"><span class="toc-item-num">9  </span>Conclusion</a></span></li><li><span><a data-toc-modified-id="Resources-10" href="#Resources"><span class="toc-item-num">10  </span>Resources</a></span></li></ul></div>
 </div>
